nginx-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: fapp
    spec:
      containers:
      - name: fapp
        image: meirkr/blazor_chat:latest
        ports:
        - containerPort: 80
