service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
    #   targetPort: 9376
#   clusterIP: 10.0.171.239
  type: ClusterIP
