service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: fapp-svc
  labels:
    app: fapp
spec:
  ports:
  - port: 80
  selector:
    app: fapp
