Ingress-route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-chat
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service-frontend
          servicePort: 80
      - path: /chat
        backend:
          serviceName: service-backend
          servicePort: 80
